[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/enemy/baseEnemy.gd" type="Script" id=1]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="SphereShape" id=2]
radius = 4.45906

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
spread = 180.0
initial_velocity = 10.0
scale_curve = SubResource( 4 )

[sub_resource type="CubeMesh" id=6]

[node name="baseEnemy" type="KinematicBody" groups=[
"enemy",
]]
script = ExtResource( 1 )

[node name="meshFolder" type="Spatial" parent="."]

[node name="meshAnimPlayer" type="AnimationPlayer" parent="meshFolder"]

[node name="MeshInstance" type="MeshInstance" parent="meshFolder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 2 )

[node name="timerFolder" type="Node" parent="."]

[node name="tenSecDeath" type="Timer" parent="timerFolder"]
autostart = true

[node name="oneSecondTimer" type="Timer" parent="timerFolder"]
autostart = true

[node name="noisePlayerTimer" type="Timer" parent="timerFolder"]
wait_time = 5.0

[node name="dieTimer" type="Timer" parent="timerFolder"]
wait_time = 1.7
one_shot = true

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, -10 )

[node name="noisePlayerFolder" type="Spatial" parent="."]

[node name="noisePlayer" type="AudioStreamPlayer3D" parent="noisePlayerFolder"]
unit_db = 20.0

[node name="dieNoisePlayer" type="AudioStreamPlayer3D" parent="noisePlayerFolder"]

[node name="hitNoisePlayer" type="AudioStreamPlayer3D" parent="noisePlayerFolder"]

[node name="orbiter" type="Spatial" parent="."]
transform = Transform( 0.996783, 0, 0.0801467, 0, 1, 0, -0.0801467, 0, 0.996783, 0, 0, 0 )

[node name="lookAtPos" type="Position3D" parent="orbiter"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 7 )

[node name="dieParticles" type="Particles" parent="."]
emitting = false
amount = 64
one_shot = true
speed_scale = 4.0
explosiveness = 0.75
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 6 )
